# ComfyUI-Magnific

./: .gitignore  README.md  __init__.py  authorize_magnific.py  freepik_api.py  mcp_client.py  pyproject.toml  requirements.txt
example_workflows/: mystic_txt2img.json
nodes/: __init__.py  _common.py  audio.py  image_edit.py  image_generate.py  mcp_video.py  reference.py  text_to_image.py  tts.py  upscale.py  video_advanced.py  video_generate.py
