[project]
name = "comfyui-magnific"
description = "ComfyUI nodes wrapping the Magnific / Freepik AI REST API (Mystic image generation, creative & precise upscaling, text/image-to-video, Soul references, text-to-speech)."
version = "0.1.0"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.urls]
Repository = "https://github.com/szprivate/ComfyUI-Magnific"

[tool.comfy]
PublisherId = "szprivate"
DisplayName = "ComfyUI-Magnific"
Icon = ""
